# wafer

./: .gitignore  Cargo.toml  README.md
diagrams/: README.md
src/: app.rs  camera.rs  console.rs  draw.rs  entity.rs  frame.rs  generation.rs  geometry.rs  input.rs  main.rs  mesh.rs  session.rs  shader.wgsl  texture.rs  time.rs  voxel.rs
src/action/: app.rs  config.rs  console.rs  input.rs  mod.rs  scene.rs  window.rs
src/app/: action.rs  mod.rs
src/draw/: buffer.rs  console.rs  console.wgsl  mod.rs  overlay.rs  pipeline.rs  primitives.rs  voxels.rs  voxels.wgsl
src/entity/: delta.rs  mod.rs
src/input/: camera.rs  console.rs  mod.rs  puppet.rs  scene.rs
src/movement/: mod.rs
src/overlay/: brush.rs  mod.rs
src/paint/: mod.rs
src/paint/overlay/: mod.rs  widgets.rs
src/paint/overlay/shaders/: slider.wgsl
src/paint/scene/: colliders.rs  mod.rs  volumes.rs  voxels.rs
src/paint/scene/shaders/: box.wgsl  volumes.wgsl
src/physics/: mod.rs
src/planets/: chunk.rs  voxel.rs
src/puppet/: camera.rs  mod.rs
src/types/: console.rs  generation.rs  math.rs  mod.rs  payload.rs  time.rs  vec.rs
src/widgets/: mod.rs  slider.rs
